--- a/teleapp/templates/index.html
+++ b/teleapp/templates/index.html
@@ -8,12 +8,7 @@
 {% endblock title %}
 
 
-{% block C1%}
+{% block c1%}
 
 
-{% for x in persons %}
-<h4>ชื่อผู้ใช้ {{ x.user }} permission {{ x.usertype }} </h4>
-{% endfor %}
-
-
-{% endblock C1 %}
+{% endblock c1 %}
