--- a/teleapp/templates/base.html
+++ b/teleapp/templates/base.html
@@ -8,191 +8,96 @@
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://kit.fontawesome.com/1f1f20f46c.js" crossorigin="anonymous"></script>
+
 </head>
 
-
-
-
-
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="/">C-HRM </a>
-					</li>
-
-
-					<li class="nav-item active">
-						<a class="nav-link"> {{ user.profile.usertype }} </a>
-					</li>
-
-
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="/" id="dropdown08" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{{ user.profile.photo}}" width="30" height="30" class="rounded-circle"></a>
-
-						<div class="dropdown-menu" aria-labelledby="dropdown08">
-							<a class="dropdown-item" href="#">แก้ใขโปรไฟล์</a>
-							<a class="dropdown-item" href="#">สินค้าของคุณ</a>
-							<a class="dropdown-item" href="#">Logout</a>
-						</div>
-					</li>
-
-
-						<a href="#"><button type="button" class="btn btn-success">Status: ON</button></a>
-				</ul>
-			</div>
-		</nav>
-
 <body>
-	
-<div class="container-fluid" style="margin-top:30px">
+{% include 'navbar.html'%}
+
+
+<div class="container-fluit">
 	<div class="row">
-		
-		<div class="col-sm-2" >
-			<div class="card bg-dark text-white ">
-				<div class="card-body"> <h3> Menu </h3><hr>
+		<div class="col-2">
 
+			<div id="accordion">
 
-					<ul class="nav nav-pills flex-column">
-					<li class="nav-item">
-						<a class="nav-link " href="#">Dashboard</a>
-					</li>
-					<li class="nav-item ">
-						<a class="nav-link " href="#">Tele sale</a>
+				<div class="card-body-sm">
+					<div class="card-header">
+					<a class="collapsed card-link" data-toggle="collapse" href="#collapse1"><i class="fa-solid fa-layer-group"></i>
+						dashboard
+					</a>
+					</div>
+					<div id="collapse1" class="collapse" data-parent="#accordion">
 
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Admin telesale</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link " href="#">Admin support</a>
-					</li>
+						<ul>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+						</ul>
 
-					<li class="nav-item">
-						<a class="nav-link " href="#">mycart</a>
-					</li>
+					</div>
+				</div>
 
-					<li class="nav-item">
-						<a class="nav-link " href="#>Employee</a>
-					</li>
+				<div class="card-body-sm">
+					<div class="card-header">
+					<a class="collapsed card-link" data-toggle="collapse" href="#collapse2"><i class="fa-solid fa-users"></i> 
+						Administrator
+					</a>
+					</div>
+					<div id="collapse2" class="collapse" data-parent="#accordion">
 
-					<li class="nav-item">
-						<a class="nav-link " href="#">Customer</a>
-					</li>					
+						<ul>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+						</ul>
 
-					<li class="nav-item">
-						<a class="nav-link " href="#">Add Customer </a>
-					</li>
+					</div>
+				</div>
 
-					<li class="nav-item">
-						<a class="nav-link " href="#">Add Employee </a>
-					</li>
+				<div class="card-body-sm">
+					<div class="card-header">
+					<a class="collapsed card-link" data-toggle="collapse" href="#collapse3"><i class="fa-solid fa-print"></i>
+						Report
+					</a>
+					</div>
+					<div id="collapse3" class="collapse" data-parent="#accordion">
 
-					<li class="nav-item">
-						<a class="nav-link " href="#"> Report All </a>
-					</li>
+						<ul>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+						</ul>
 
+					</div>
+				</div>
 
-					<li class="nav-item">
-						<a class="nav-link " href="#">Setting</a>
-					</li>
+				<div class="card-body-sm">
+					<div class="card-header">
+					<a class="collapsed card-link" data-toggle="collapse" href="#collapse4"><i class="fa-solid fa-gears"></i> 
+						Setting
+					</a>
+					</div>
+					<div id="collapse4" class="collapse" data-parent="#accordion">
 
-					
+						<ul>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+						</ul>
 
-					<li class="nav-item">
-						<a class="nav-link " href="#"><button type="button" class="btn btn-warning">ออกจากระบบ</button></a>
-					</li>				
+					</div>
+				</div>
 
-				</ul>
 			</div>
-			</div>
-			<br>
-		<div class="card">
-			<div class="card-body">
-					<! *********************************** R1 ******************************* >
-
-						{% block R1 %}
 
 
-						{% endblock R1 %}
-
-
-
-					<! *********************************** R1 ******************************* >
-
-			</div>
 		</div>
 
-		</div>
-
-
-
-	<div class="col-sm-8" >
-
-		<div class="card bg-ligh">
-			<div class="card-body">
-				
-
-					<! *********************************** C1 ******************************* >
-
-						{% block C1 %}
-
-
-						{% endblock C1 %}
-
-
-
-					<! *********************************** End C1 ******************************* >
-
-
-			</div>
-		</div>
+	  <div class="col-8">
+		{% block c1 %}{% endblock c1 %}
+	  </div>
 	</div>
-
-
-
-
-	<div class="col-sm-2" >
-		<div class="card">
-			<div class="card">
-
-
-				<! *********************************** L1 ******************************* >
-
-					{% block L1 %}
-
-
-					{% endblock L1 %}
-
-
-
-				<! *********************************** End L1 ******************************* >
-			</div>
-	</div>
-	<br>
-		<div class="card bg-dark text-white">
-			<div class="card-body">
-
-
-				<! *********************************** L2 ******************************* >
-
-					{% block L2 %}
-
-
-					{% endblock L2 %}
-
-
-
-				<! *********************************** End L2 ******************************* >
-			</div>
-	</div>
-</div>
-
-
-
-
+  </div>
 </html>
