--- a/teleapp/templates/dashboard.html
+++ b/teleapp/templates/dashboard.html
@@ -8,8 +8,191 @@
 {% endblock title %}
 
 
+{% block c0%}
+<div class="card-body-lg text-center bg-dark text-light" style="margin-top: 10px;">   
+    <h1>Dashboard</h1>
+    <p> รวบรวมข้อมูล Realtime เวลา {{ now }} </p>
+</div>
+{% endblock c0 %}
+
 {% block c1 %}
 
-<p>ะำหะ</p>
+<div class="text-center " style="margin-top: 10px;">        
+
+    <div class="card-columns">
+        
+        <div class="card bg-secondary text-center text-light">
+
+            <p>Duckbet</p>
+            <h1 class="card-text">158f93</h1>
+            <p>เติมเงิน</p>
+
+        </div>
+
+
+        <div class="card bg-secondary text-center text-light">
+
+            <p>Mughuay</p>
+            <h1 class="card-text">15893</h1>
+            <p>เติมเงิน</p>
+
+        </div>
+
+
+        <div class="card bg-secondary text-center text-light">
+
+            <p>Thai Lotto</p>
+            <h1 class="card-text">15893</h1>
+            <p>คน</p>
+
+        </div>
+
+
+        <div class="card bg-success text-center text-light">
+
+            <p>สลากไท</p>
+            <h1 class="card-text">15893</h1>
+            <p>ใบ</p>
+
+        </div>
+
+
+        <div class="card bg-warning text-center text-light">
+
+            <p>Tele Sale Team</p>
+            <h1 class="card-text">15893</h1>
+            <p>เติมเงิน / สมัคร</p>
+
+        </div>
+
+        <div class="card bg-warning text-center text-light">
+
+            <p style="border: 5;">Community Team</p>
+            <h1 class="card-text">15893</h1>
+            <p>เติมเงิน / สมัคร</p>
+
+        </div>
+
+        <div class="card bg-success text-center text-light">
+
+            <p>Online Team</p>
+            <h1 class="card-text">15893</h1>
+            <p>เติมเงิน / สมัคร</p>
+
+        </div>
+        
+        <div class="card bg-warning text-center text-light">
+
+            <p>จำนวนเบอร์</p>
+            <h1 class="card-text">15893</h1>
+            <p>เบอร์</p>
+
+        </div>
+
+        <div class="card bg-primary text-center text-light">
+
+            <p>คุณภาพเบอร์โทร</p>
+            <h1 class="card-text">15893</h1>
+            <p>เปอร์เซ็นต์</p>
+
+        </div>
+
+        <div class="card bg-info text-center text-light">
+
+            <p>จำนวนผู้สนใจ</p>
+            <h1 class="card-text">15893</h1>
+            <p>เปอร์เซ็นต์</p>
+
+        </div>
+
+        <div class="card bg-info text-center ">
+
+            <p class=" text-light">จำนวนพนักงานผ่านเกณฑ์</p>
+            <h1 class="card-text">15893</h1>
+            <p class=" text-light" >เปอร์เซ็นต์</p>
+
+        </div>
+
+        <div class="card bg-danger text-center ">
+
+            <p class=" text-light">จำนวนพนักงานยังไม่ผ่านเกณฑ์</p>
+            <h1 class="card-text">2</h1>
+            <p class=" text-light">คน</p>
+
+        </div>
+
+
+    </div>
+</div><br>
 
 {% endblock c1 %}
+
+
+{% block R1 %}
+<div class="card text-center"> 
+    <table class="table ">
+        <thead class="bg-dark ">
+            <tr class="table text-light">
+                <th>ผลิตภัณฑ์</th>
+                <th>เติมเงิน</th>
+            </tr>
+        </thead>
+
+
+        <tbody>
+            <tr >
+                <td>สลากไทย</td>
+                <td>150</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+{% endblock R1%}
+
+{% block R2 %}
+<br>
+<div class="card text-center"> 
+    <table class="table ">
+        <thead class="bg-dark ">
+            <tr class="table text-light text-center">
+                <th>อันดับ</th>
+                <th>สลากไท</th>
+                <th>จำนวน</th>
+            </tr>
+        </thead>
+
+
+        <tbody>
+            <tr class="table text-center">
+                <td>{{user}}</td>
+                <td>สลากไทย</td>
+                <td>150</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+{% endblock R2 %}
+
+{% block R3 %}
+<br>
+<div class="card text-center"> 
+    <table class="table ">
+        <thead class="bg-dark ">
+            <tr class="table text-light text-center">
+                <th>อันดับ</th>
+                <th>ดักเบ็ท</th>
+                <th>จำนวน</th>
+            </tr>
+        </thead>
+
+
+        <tbody>
+            <tr class="table text-center">
+                <td>{{ user }}</td>
+                <td>20 คน</td>
+                <td>150 บาท</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+{% endblock R3 %}
