--- a/teleapp/templates/navbar.html
+++ b/teleapp/templates/navbar.html
@@ -1,12 +1,12 @@
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-dark border-bottom shadow-sm">
+  <h5 class="my-0 mr-md-auto font-weight-normal text-light"><img src="{{ user.profile.photo.url}} " width="40" height="40"class="rounded-circle" ></h5>
 
-<nav class="navbar navbar-expand-sm bg-dark justify-content-center">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa-solid fa-user"></i> {{user}} </a>
-      </li>
 
-      <li class="nav-item">
-        <button type="button" class="btn btn-danger" style="width:100px" >Logout</button>
-      </li>
-    </ul>
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a class="p-2 text-light" href="#">รหัสพนักงาน: {{user.profile.user.id}}</a>
+    
+    <a class="p-2 text-light" href="#">ตำแหน่ง: {{user.profile.usertype}}</a>
+    <a class="p-2 text-light" href="#">ชื่อ: {{user}}</a>
   </nav>
+  <a class="btn btn-success" href="#">Sign out</a>
+</div>
