--- a/teleapp/templates/base.html
+++ b/teleapp/templates/base.html
@@ -88,7 +88,7 @@
 
 						<ul>
 							<a class="nav-link" href="#">Search Customer</a>
-							<a class="nav-link" href="#">Add Customer</a>
+							<a class="nav-link" href="/add_customer/">Add Customer</a>
 							<a class="nav-link" href="#">Customer Details</a>
 							<a class="nav-link" href="#">Report</a>
 						</ul>
