--- a/teleapp/templates/dashboard.html
+++ b/teleapp/templates/dashboard.html
@@ -17,13 +17,13 @@
 
 {% block c1 %}
 
-<div class="text-center " style="margin-top: 10px;">        
+<div class="text-center ">        
 
     <div class="card-columns">
         
         <div class="card bg-secondary text-center text-light">
 
-            <p>Duckbet</p>
+            <h5>Duckbet</h5>
             <h1 class="card-text">158f93</h1>
             <p>เติมเงิน</p>
 
@@ -32,25 +32,15 @@
 
         <div class="card bg-secondary text-center text-light">
 
-            <p>Mughuay</p>
+            <h5>Mughuay</h5>
             <h1 class="card-text">15893</h1>
             <p>เติมเงิน</p>
 
         </div>
 
-
-        <div class="card bg-secondary text-center text-light">
-
-            <p>Thai Lotto</p>
-            <h1 class="card-text">15893</h1>
-            <p>คน</p>
-
-        </div>
-
-
         <div class="card bg-success text-center text-light">
 
-            <p>สลากไท</p>
+            <h5>สลากไท</p>
             <h1 class="card-text">15893</h1>
             <p>ใบ</p>
 
@@ -59,7 +49,7 @@
 
         <div class="card bg-warning text-center text-light">
 
-            <p>Tele Sale Team</p>
+            <h5>Tele Sale Team</h5>
             <h1 class="card-text">15893</h1>
             <p>เติมเงิน / สมัคร</p>
 
@@ -67,15 +57,15 @@
 
         <div class="card bg-warning text-center text-light">
 
-            <p style="border: 5;">Community Team</p>
-            <h1 class="card-text">15893</h1>
+            <h5 style="color: forestgreen;">Community Team</h5>
+            <h1 class="card-text">893</h1>
             <p>เติมเงิน / สมัคร</p>
 
         </div>
 
         <div class="card bg-success text-center text-light">
 
-            <p>Online Team</p>
+            <h5>Online Team</h5>
             <h1 class="card-text">15893</h1>
             <p>เติมเงิน / สมัคร</p>
 
@@ -83,7 +73,7 @@
         
         <div class="card bg-warning text-center text-light">
 
-            <p>จำนวนเบอร์</p>
+            <h5>จำนวนเบอร์คงเหลือ</h5>
             <h1 class="card-text">15893</h1>
             <p>เบอร์</p>
 
@@ -91,7 +81,7 @@
 
         <div class="card bg-primary text-center text-light">
 
-            <p>คุณภาพเบอร์โทร</p>
+            <h5>คุณภาพเบอร์โทร</h5>
             <h1 class="card-text">15893</h1>
             <p>เปอร์เซ็นต์</p>
 
@@ -99,7 +89,7 @@
 
         <div class="card bg-info text-center text-light">
 
-            <p>จำนวนผู้สนใจ</p>
+            <h5>จำนวนผู้สนใจ</h5>
             <h1 class="card-text">15893</h1>
             <p>เปอร์เซ็นต์</p>
 
@@ -107,7 +97,7 @@
 
         <div class="card bg-info text-center ">
 
-            <p class=" text-light">จำนวนพนักงานผ่านเกณฑ์</p>
+            <h5 >จำนวนพนักงานผ่านเกณฑ์</h5>
             <h1 class="card-text">15893</h1>
             <p class=" text-light" >เปอร์เซ็นต์</p>
 
