--- a/teleapp/templates/add_customer.html
+++ b/teleapp/templates/add_customer.html
@@ -73,7 +73,7 @@
 					<label class="form-check-label" for="game">
 					<input type="checkbox" class="form-check-input" id="game" name="game" value="game" >เกมส์
 					</label>
-				</div>
+				</div><br>
 
 				<div class="input-group mb-3 input-group-sm">
 					<div class="input-group-prepend"><span class="input-group-text">อื่น ๆ </span></div>
@@ -125,12 +125,14 @@
 	
 	
 				<div class="col-sm-2">
+
 					<span>กลุ่มนำเล่น</span><hr>
 					<div class="form-check">
 						<label class="form-check-label">
 							<input type="radio" class="form-check-input" name="exp" value="yes" >สนใจ
 						</label>
 					</div>
+
 					<div class="form-check">
 						<label class="form-check-label">
 							<input type="radio" class="form-check-input" name="exp" value="no" >ไม่สนใจ
@@ -140,28 +142,33 @@
 				</div>
 				
 				<div class="col-sm-2">
-					<span>ส่งSMS ?</span><hr>
+					<span>ส่งSMS</span><hr>
+
 					<div class="form-check">
 						<label class="form-check-label">
 							<input type="radio" class="form-check-input" name="sms" value="no">สนใจ
 						</label>
 					</div>
+
 					<div class="form-check">
 						<label class="form-check-label">
 							<input type="radio" class="form-check-input" name="sms" value="no" >ไม่สนใจ
 						</label>
 					</div><br>
+
 					<span>รับโบนัส</span><hr>
 					<div class="form-check">
 						<label class="form-check-label">
 							<input type="radio" class="form-check-input" name="sms" value="no">สนใจ
 						</label>
 					</div>
+
 					<div class="form-check">
 						<label class="form-check-label">
 							<input type="radio" class="form-check-input" name="sms" value="no" >ไม่สนใจ
 						</label>
 					</div>
+
 				</div>
 	
 	
@@ -173,16 +180,16 @@
 				<div class="input-group mb-3 input-group-sm">
 					<div class="input-group-prepend"><span class="input-group-text">เบอร์โทรลูกค้า</span></div>
 					<input type="text" class="form-control">
-				</div>
+				</div>						
+				
 
-							
 				<div class="input-group mb-3 input-group-sm">
-					<div class="input-group-prepend"><span class="input-group-text">Line ID</span></div>
+					<div class="input-group-prepend"><span class="input-group-text">เวลาโทรกลับ</span></div>
 					<input type="text" class="form-control">
 				</div>
 
 				<div class="input-group mb-3 input-group-sm">
-					<div class="input-group-prepend"><span class="input-group-text">เวลาโทรกลับ</span></div>
+					<div class="input-group-prepend"><span class="input-group-text">Line ID</span></div>
 					<input type="text" class="form-control">
 				</div>
 							
@@ -198,7 +205,7 @@
 					<button type="submit" class="btn btn-success btn-block">บันทึกข้อมูล</button>
 				</div>
 				<div class="card-body-sm col-sm-6">
-					<button type="submit" class="btn btn-danger btn-block">ยกเลิก</button>
+					<button type="submit" class="btn btn-secondary btn-block">ยกเลิก</button>
 				</div>
 			</div>
 
