--- a/teleapp/templates/dashboard.html
+++ b/teleapp/templates/dashboard.html
@@ -21,57 +21,57 @@
 
     <div class="card-columns">
         
-        <div class="card bg-secondary text-center text-light">
+        <div class="card bg-dark text-center text-light">
 
             <h5>Duckbet</h5>
-            <h1 class="card-text">158f93</h1>
+            <h1 class="card-text">93</h1>
             <p>เติมเงิน</p>
 
         </div>
 
 
-        <div class="card bg-secondary text-center text-light">
+        <div class="card bg-dark text-center text-light">
 
             <h5>Mughuay</h5>
-            <h1 class="card-text">15893</h1>
+            <h1 class="card-text">15</h1>
             <p>เติมเงิน</p>
 
         </div>
 
-        <div class="card bg-success text-center text-light">
+        <div class="card bg-dark text-center text-light">
 
-            <h5>สลากไท</p>
-            <h1 class="card-text">15893</h1>
+            <h5>สลากไท</h5>
+            <h1 class="card-text">89</h1>
             <p>ใบ</p>
 
         </div>
 
 
-        <div class="card bg-warning text-center text-light">
+        <div class="card bg-dark text-center text-light">
 
             <h5>Tele Sale Team</h5>
-            <h1 class="card-text">15893</h1>
-            <p>เติมเงิน / สมัคร</p>
-
-        </div>
-
-        <div class="card bg-warning text-center text-light">
-
-            <h5 style="color: forestgreen;">Community Team</h5>
-            <h1 class="card-text">893</h1>
+            <h1 class="card-text">183</h1>
             <p>เติมเงิน / สมัคร</p>
 
         </div>
 
         <div class="card bg-success text-center text-light">
 
+            <h5>Community Team</h5>
+            <h1 class="card-text">893</h1>
+            <p>เติมเงิน / สมัคร</p>
+
+        </div>
+
+        <div class="card badge-warning text-center text-light">
+
             <h5>Online Team</h5>
-            <h1 class="card-text">15893</h1>
+            <h1 class="card-text">93</h1>
             <p>เติมเงิน / สมัคร</p>
 
         </div>
         
-        <div class="card bg-warning text-center text-light">
+        <div class="card bg-info text-center text-light">
 
             <h5>จำนวนเบอร์คงเหลือ</h5>
             <h1 class="card-text">15893</h1>
@@ -79,7 +79,7 @@
 
         </div>
 
-        <div class="card bg-primary text-center text-light">
+        <div class="card bg-dark text-center text-light">
 
             <h5>คุณภาพเบอร์โทร</h5>
             <h1 class="card-text">15893</h1>
@@ -87,7 +87,7 @@
 
         </div>
 
-        <div class="card bg-info text-center text-light">
+        <div class="card bg-dark text-center text-light">
 
             <h5>จำนวนผู้สนใจ</h5>
             <h1 class="card-text">15893</h1>
@@ -95,7 +95,7 @@
 
         </div>
 
-        <div class="card bg-info text-center ">
+        <div class="card badge-dark text-center text-light">
 
             <h5 >จำนวนพนักงานผ่านเกณฑ์</h5>
             <h1 class="card-text">15893</h1>
@@ -103,9 +103,9 @@
 
         </div>
 
-        <div class="card bg-danger text-center ">
+        <div class="card badge-danger text-center text-light">
 
-            <p class=" text-light">จำนวนพนักงานยังไม่ผ่านเกณฑ์</p>
+            <h5 class=" text-light">จำนวนพนักงานยังไม่ผ่านเกณฑ์</h5>
             <h1 class="card-text">2</h1>
             <p class=" text-light">คน</p>
 
@@ -116,7 +116,13 @@
 </div><br>
 
 {% endblock c1 %}
+{% block c2%}
 
+
+
+
+
+{% endblock c2 %}
 
 {% block R1 %}
 <div class="card text-center"> 
