--- a/teleapp/templates/navbar.html
+++ b/teleapp/templates/navbar.html
@@ -8,5 +8,5 @@
     <a class="p-2 text-light" href="#">ตำแหน่ง: {{user.profile.usertype}}</a>
     <a class="p-2 text-light" href="#">ชื่อ: {{user}}</a>
   </nav>
-  <a class="btn btn-success" href="#">Sign out</a>
+  <a class="btn btn-danger" href="#">Sign  out</a>
 </div>
