--- a/teleapp/templates/dashboard.html
+++ b/teleapp/templates/dashboard.html
@@ -1,194 +1,152 @@
-{% extends "base.html" %}
-
-
-{% block title %}
-
-<title>dashboard</title>
-
-{% endblock title %}
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>dashboard</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
+  
+<div class="container-fluid">
 
 {% block c0%}
 <div class="card-body-lg text-center bg-dark text-light" style="margin-top: 10px;">   
     <h1>Dashboard</h1>
-    <p> รวบรวมข้อมูล Realtime เวลา {{ now }} </p>
+    <p> รายงานประจำวันที่ เวลา {{ now }} </p>
 </div>
 {% endblock c0 %}
 
 {% block c1 %}
 
+
 <div class="text-center ">        
 
     <div class="card-columns">
-        
-        <div class="card bg-dark text-center text-light">
 
-            <h5>Duckbet</h5>
-            <h1 class="card-text">93</h1>
-            <p>เติมเงิน</p>
-
-        </div>
-
-
-        <div class="card bg-dark text-center text-light">
-
-            <h5>Mughuay</h5>
-            <h1 class="card-text">15</h1>
-            <p>เติมเงิน</p>
-
-        </div>
-
-        <div class="card bg-dark text-center text-light">
-
-            <h5>สลากไท</h5>
-            <h1 class="card-text">89</h1>
-            <p>ใบ</p>
-
-        </div>
-
-
-        <div class="card bg-dark text-center text-light">
+        <div class="card bg-primary text-center text-light ">
 
             <h5>Tele Sale Team</h5>
-            <h1 class="card-text">183</h1>
-            <p>เติมเงิน / สมัคร</p>
+            <h1 class="card-text" style="color: black;"><strong>20</strong></h1>
+            <p><small>เติมเงิน / สมัคร</small></p>
 
         </div>
 
         <div class="card bg-success text-center text-light">
 
             <h5>Community Team</h5>
-            <h1 class="card-text">893</h1>
-            <p>เติมเงิน / สมัคร</p>
+            <h1 class="card-text" style="color: black;"><strong>335</strong></h1>
+            <p><small>เติมเงิน / สมัคร</small></p>
 
         </div>
 
-        <div class="card badge-warning text-center text-light">
+        <div class="card bg-info text-center text-light">
+
+            <h5>Community Team 2 </h5>
+            <h1 class="card-text" style="color: black;"><strong>0</strong></h1>
+            <p><small>เติมเงิน / สมัคร</small></p>
+
+        </div>
+
+        <div class="card bg-warning text-center text-light">
 
             <h5>Online Team</h5>
-            <h1 class="card-text">93</h1>
-            <p>เติมเงิน / สมัคร</p>
+            <h1 class="card-text" style="color: black;"><strong>93</strong></h1>
+            <p><small>เติมเงิน / สมัคร</small></p>
+
+        </div>
+
+        <div class="card bg-danger text-center text-light">
+
+            <h5>Mynmar Team</h5>
+            <h1 class="card-text" style="color: black;"><strong>6</strong></h1>
+            <p><small>เติมเงิน / สมัคร</small></p>
 
         </div>
         
-        <div class="card bg-info text-center text-light">
+        <div class="card text-center bg-secondary text-light">
+
+            <h5>Duckbet</h5>
+            <h1 class="card-text" style="color: black;"><strong>101</strong></h1>
+            <p><small>เติมเงิน / สมัคร</small></p>
+
+        </div>
+
+    
+
+
+        <div class="card  bg-secondary text-light">
+
+            <h5>Mughuay</h5>
+            <h1 class="card-text" style="color: black;"><strong>15</strong></h1>
+            <p><small>เติมเงิน / สมัคร</small></p>
+
+        </div>
+
+        <div class="card bg-secondary text-light">
+
+            <h5>สลากไทบ้าน</h5>
+            <h1 class="card-text" style="color: black;"><strong>362</strong></h1>
+            <p><small>ใบ</small></p>
+
+        </div>
+
+        
+        <div class="card bg-secondary text-light">
 
             <h5>จำนวนเบอร์คงเหลือ</h5>
-            <h1 class="card-text">15893</h1>
-            <p>เบอร์</p>
+            <h1 class="card-text" style="color: black;"><strong>75,893</strong></h1>
+            <p><small>ใบ</small></p>
 
         </div>
 
-        <div class="card bg-dark text-center text-light">
+        <div class="card  bg-secondary text-light">
 
             <h5>คุณภาพเบอร์โทร</h5>
-            <h1 class="card-text">15893</h1>
-            <p>เปอร์เซ็นต์</p>
+            <h1 class="card-text" style="color: black;"><strong>53</strong></h1>
+            <p><small>ใบ</small></p>
 
         </div>
 
-        <div class="card bg-dark text-center text-light">
+        <div class="card bg-secondary text-light">
 
             <h5>จำนวนผู้สนใจ</h5>
-            <h1 class="card-text">15893</h1>
+            <h1 class="card-text" style="color: black;"><strong>983</strong></h1>
+            <p><small>ใบ</small></p>
+
+        </div>
+
+        <div class="card bg-secondary text-light ">
+
+            <h5>SMS</h5>
+            <h1 class="card-text" style="color: black;"><strong>93</strong></h1>
+            <p><small>ใบ</small></p>
+
+        </div>
+
+        <div class="card bg-secondary text-light ">
+
+            <h5>พนักงานทำงาน</h5>
+            <h1 class="card-text" style="color: rgb(81, 255, 0);"><strong>32</strong></h1>
             <p>เปอร์เซ็นต์</p>
 
         </div>
 
-        <div class="card badge-dark text-center text-light">
+        <div class="card bg-secondary text-light">
 
-            <h5 >จำนวนพนักงานผ่านเกณฑ์</h5>
-            <h1 class="card-text">15893</h1>
-            <p class=" text-light" >เปอร์เซ็นต์</p>
-
-        </div>
-
-        <div class="card badge-danger text-center text-light">
-
-            <h5 class=" text-light">จำนวนพนักงานยังไม่ผ่านเกณฑ์</h5>
-            <h1 class="card-text">2</h1>
-            <p class=" text-light">คน</p>
+            <h5>จำนวนพนักงานยังไม่ผ่านเกณฑ์</h5>
+            <h1 class="card-text" style="color: rgb(196, 1, 1);">2</h1>
+            <p>คน</p>
 
         </div>
+
+        
 
 
     </div>
 </div><br>
 
 {% endblock c1 %}
-{% block c2%}
-
-
-
-
-
-{% endblock c2 %}
-
-{% block R1 %}
-<div class="card text-center"> 
-    <table class="table ">
-        <thead class="bg-dark ">
-            <tr class="table text-light">
-                <th>ผลิตภัณฑ์</th>
-                <th>เติมเงิน</th>
-            </tr>
-        </thead>
-
-
-        <tbody>
-            <tr >
-                <td>สลากไทย</td>
-                <td>150</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-{% endblock R1%}
-
-{% block R2 %}
-<br>
-<div class="card text-center"> 
-    <table class="table ">
-        <thead class="bg-dark ">
-            <tr class="table text-light text-center">
-                <th>อันดับ</th>
-                <th>สลากไท</th>
-                <th>จำนวน</th>
-            </tr>
-        </thead>
-
-
-        <tbody>
-            <tr class="table text-center">
-                <td>{{user}}</td>
-                <td>สลากไทย</td>
-                <td>150</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-{% endblock R2 %}
-
-{% block R3 %}
-<br>
-<div class="card text-center"> 
-    <table class="table ">
-        <thead class="bg-dark ">
-            <tr class="table text-light text-center">
-                <th>อันดับ</th>
-                <th>ดักเบ็ท</th>
-                <th>จำนวน</th>
-            </tr>
-        </thead>
-
-
-        <tbody>
-            <tr class="table text-center">
-                <td>{{ user }}</td>
-                <td>20 คน</td>
-                <td>150 บาท</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-{% endblock R3 %}
