--- a/teleapp/templates/dashboard.html
+++ b/teleapp/templates/dashboard.html
@@ -11,7 +11,7 @@
 {% block c0%}
 <div class="card-body-lg text-center bg-dark text-light" style="margin-top: 10px;">   
     <h1>Dashboard</h1>
-    <p> รวบรวมข้อมูล Realtime เวลา {{ now }} </p>
+    <p> รายงานประจำวันที่ {{ now }} </p>
 </div>
 {% endblock c0 %}
 
