--- a/teleapp/templates/register_form.html
+++ b/teleapp/templates/register_form.html
@@ -1,11 +1,20 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  {% block title %}
 
+  <title>Register</title>
 
-{% block title %}
+  {% endblock title %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
 
-<title>Register</title>
-
-{% endblock title %}
 
 {% block c0 %}
 <div class="jumbotron text-center">
@@ -18,7 +27,7 @@
 
 
 {% block c1%}
-<div class="container-fluid">
+<div class="container">
     <! ***** หากมีการอัพโหลดไฟล์ ตรงนี้ด้วยสำคัญ >
     <form method="POST">
   
