--- a/teleapp/templates/dashboard.html
+++ b/teleapp/templates/dashboard.html
@@ -29,39 +29,39 @@
 
         <div class="card bg-primary text-center text-light ">
 
-            <h5>Tele Sale Team</h5>
+            <p><small>Tele Sale Team</small></p>
             <h1 class="card-text" style="color: black;"><strong>20</strong></h1>
-            <p><small>เติมเงิน / สมัคร</small></p>
+            <p><small></small><small>เติมเงิน / สมัคร</small></p>
 
         </div>
 
         <div class="card bg-success text-center text-light">
 
-            <h5>Community Team</h5>
+            <p><small>Community Team</small></p>
             <h1 class="card-text" style="color: black;"><strong>335</strong></h1>
-            <p><small>เติมเงิน / สมัคร</small></p>
+            <p><small></small><small>เติมเงิน / สมัคร</small></p>
 
         </div>
 
         <div class="card bg-info text-center text-light">
 
-            <h5>Community Team 2 </h5>
+            <p><small>Community Team 2</small> </p>
             <h1 class="card-text" style="color: black;"><strong>0</strong></h1>
-            <p><small>เติมเงิน / สมัคร</small></p>
+            <p><small></small><small>เติมเงิน / สมัคร</small></p>
 
         </div>
 
         <div class="card bg-warning text-center text-light">
 
-            <h5>Online Team</h5>
+            <p><small>Online Team</small></p>
             <h1 class="card-text" style="color: black;"><strong>93</strong></h1>
-            <p><small>เติมเงิน / สมัคร</small></p>
+            <p><small></small><small>เติมเงิน / สมัคร</small></p>
 
         </div>
 
         <div class="card bg-danger text-center text-light">
 
-            <h5>Mynmar Team</h5>
+            <p><small>Mynmar Team</small></p>
             <h1 class="card-text" style="color: black;"><strong>6</strong></h1>
             <p><small>เติมเงิน / สมัคร</small></p>
 
@@ -69,7 +69,7 @@
         
         <div class="card text-center bg-secondary text-light">
 
-            <h5>Duckbet</h5>
+            <p><small>Duckbet</small></p>
             <h1 class="card-text" style="color: black;"><strong>101</strong></h1>
             <p><small>เติมเงิน / สมัคร</small></p>
 
@@ -80,7 +80,7 @@
 
         <div class="card  bg-secondary text-light">
 
-            <h5>Mughuay</h5>
+            <p><small>Mughuay</small></p>
             <h1 class="card-text" style="color: black;"><strong>15</strong></h1>
             <p><small>เติมเงิน / สมัคร</small></p>
 
@@ -88,7 +88,7 @@
 
         <div class="card bg-secondary text-light">
 
-            <h5>สลากไทบ้าน</h5>
+            <p><small>Slakthai Ban</small></p>
             <h1 class="card-text" style="color: black;"><strong>362</strong></h1>
             <p><small>ใบ</small></p>
 
@@ -97,49 +97,49 @@
         
         <div class="card bg-secondary text-light">
 
-            <h5>จำนวนเบอร์คงเหลือ</h5>
+            <p><small>Number Phone</small></p>
             <h1 class="card-text" style="color: black;"><strong>75,893</strong></h1>
-            <p><small>ใบ</small></p>
+            <p><small>เบอร์</small></p>
 
         </div>
 
         <div class="card  bg-secondary text-light">
 
-            <h5>คุณภาพเบอร์โทร</h5>
+            <p><small>Telephon Quality</small></p>
             <h1 class="card-text" style="color: black;"><strong>53</strong></h1>
-            <p><small>ใบ</small></p>
+            <p><small>เปอร์เซ็นต์</small></p>
 
         </div>
 
         <div class="card bg-secondary text-light">
 
-            <h5>จำนวนผู้สนใจ</h5>
+            <p><small>Interest</small></p>
             <h1 class="card-text" style="color: black;"><strong>983</strong></h1>
-            <p><small>ใบ</small></p>
+            <p><small>คน</small></p>
 
         </div>
 
         <div class="card bg-secondary text-light ">
 
-            <h5>SMS</h5>
+            <p><small>SMS</small></p>
             <h1 class="card-text" style="color: black;"><strong>93</strong></h1>
-            <p><small>ใบ</small></p>
+            <p><small>ครั้ง</small></p>
 
         </div>
 
         <div class="card bg-secondary text-light ">
 
-            <h5>พนักงานทำงาน</h5>
+            <p><small>พนักงานทำงาน</small></p>
             <h1 class="card-text" style="color: rgb(81, 255, 0);"><strong>32</strong></h1>
-            <p>เปอร์เซ็นต์</p>
+            <p><small>เปอร์เซ็นต์</small></p>
 
         </div>
 
         <div class="card bg-secondary text-light">
 
-            <h5>จำนวนพนักงานยังไม่ผ่านเกณฑ์</h5>
-            <h1 class="card-text" style="color: rgb(196, 1, 1);">2</h1>
-            <p>คน</p>
+            <p><small>พนักงานยังไม่ผ่านเกณฑ์</small></p>
+            <h1 class="card-text" style="color: rgb(196, 1, 1);"><strong>2</strong></h1>
+            <p><small>คน</small></p>
 
         </div>
 
